--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -3,20 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="./css/qr.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
+  <main>
+    <div class="main-container">
+      <div class="qr-container">
+        <img src="./images/image-qr-code.png" alt="QR Code" />
+      </div>
+  <p><strong>Improve your front-end skills by building projects</strong></p>
 
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
-  <div class="attribution">
-    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Sergio Roldan Ibañez</a>.
-  </div>
+  <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </div>
+  </main>
 </body>
 </html>
