--- a/blog-preview-card-main/index.html
+++ b/blog-preview-card-main/index.html
@@ -13,7 +13,8 @@
 <main>
 <div class="main-container">
     <div>
-      <img class="img-container" src="./assets/images/illustration-article.svg" alt="image">
+      <img class="img-container" 
+      src="./assets/images/illustration-article.svg" alt="image">
     </div>
   
   <div class="learn">
@@ -24,9 +25,12 @@
 
   <h2>HTML & CSS foundations</h2>
 
-  <p class="text">These languages are the backbone of every website, defining structure, content, and presentation.</p>
+  <p class="text">These languages are the backbone of every website, 
+    defining structure, content, and presentation.</p>
 <div class="avatar">
-  <img class="greg" src="./assets/images/image-avatar.webp" alt="avatar"><p class="Greg">Greg Hooper</p>
+  <img class="greg" 
+  src="./assets/images/image-avatar.webp" alt="avatar">
+  <p class="Greg">Greg Hooper</p>
 </div>
 </div>
 </main>
