--- a/social-links-profile-main/index.html
+++ b/social-links-profile-main/index.html
@@ -3,32 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="./css/Social.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
-  <title>Frontend Mentor | Social links profile</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>Profile</title>
 </head>
 <body>
+<main>
+  <div class="main-container">
+    <img src="./assets/images/Sergio.jpg" alt="My self">
+  <h1>Sergio Roldan</h2>
+  <h2>Castellon, Spain</h4>
+  <p>"Front-end developer and avid sportsman."</p> 
+<div class="buttons">
+  <input type="button" value="GitHub"  onclick="window.location.href = 'https://github.com/NeoV10/Development';">
+  <input type="button" value="Linkedin" onclick="window.location.href = 'https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile';">
+  <input type="button" value="Twitter" onclick="window.location.href = 'https://x.com/SergioR07390664';">
+  <input type="button" value="Instagram" onclick="window.location.href = 'https://www.instagram.com/pepelapuerta/';">
+  <input type="button" value="My CV" onclick="window.location.href='./assets/pdf/CV_SERGIO_ROLDAN_EN.pdf';">
 
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
-
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+</div>
+</div>
+</main>
 </body>
 </html>
