--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -65,19 +65,19 @@
     <table>
       <tr>
         <td>Calories</td>
-        <td>277 kcal</td>
+        <td class="color">277 kcal</td>
       </tr>
       <tr>
         <td>Carbs</td>
-        <td>0 g</td>
+        <td class="color">0 g</td>
       </tr>
       <tr>
         <td>Protein</td>
-        <td>20 g</td>
+        <td class="color">20 g</td>
       </tr>
       <tr>
         <td>Fat</td>
-        <td>22 g</td>
+        <td class="color">22 g</td>
       </tr>
     </table>
   
