--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -9,6 +9,7 @@
   <title>Frontend Mentor | Recipe page</title>
 </head>
 <body>
+  <main>
   <div class="main-content">
 <img src="./assets/images/image-omelette.jpeg" alt="Omelette">
   <h1>Simple Omelette Recipe</h1>
@@ -84,5 +85,6 @@
   </table>
 </div>
 </div>
+</main>
 </body>
 </html>
