--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -10,19 +10,26 @@
 
 </head>
 <body>
+<main>
+<div class="main-container">
+  <picture>
+    <source srcset="./images/image-product-desktop.jpg" media="(min-width: 1440px)">
+    <source srcset="./images-image-product-mobile.jpg" media="(max-width: 320px)">
+    <img src="./images/image-product-mobile.jpg" alt="Mobile-design">
+  </picture>
+<div class="content">
+  <h1>Perfume</h1>
 
-  Perfume
+  <h2>Gabrielle Essence Eau De Parfum</h2>
 
-  Gabrielle Essence Eau De Parfum
+  <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+    Perfumer-Creator for the House of CHANEL.</p>
 
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
+  <div class="price">$149.99 <span>$169.99</span></div>
 
-  $149.99
-  $169.99
-
-  Add to Cart
-  
-
+  <input type="button" value="Add to Cart">
+</div>
+</div>
+</main>
 </body>
 </html>
