Update (almost finish)

--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -13,8 +13,8 @@
 <main>
 <div class="main-container">
   <picture>
-    <source srcset="./images/image-product-desktop.jpg" media="(min-width: 1440px)">
-    <source srcset="./images-image-product-mobile.jpg" media="(max-width: 320px)">
+    <source srcset="./images/image-product-desktop.jpg" media="(min-width: 1448px)">
+    <source srcset="./images-image-product-mobile.jpg" media="(max-width: 375px)">
     <img src="./images/image-product-mobile.jpg" alt="Mobile-design">
   </picture>
 <div class="content">
@@ -27,7 +27,8 @@
 
   <div class="price">$149.99 <span>$169.99</span></div>
 
-  <input type="button" value="Add to Cart">
+  <button>Add to Cart</button>
+
 </div>
 </div>
 </main>
