--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -15,7 +15,7 @@
   <picture>
     <source srcset="./images/image-product-desktop.jpg" media="(min-width: 1448px)">
     <source srcset="./images-image-product-mobile.jpg" media="(max-width: 375px)">
-    <img src="./images/image-product-mobile.jpg" alt="Mobile-design">
+    <img class="mobile" src="./images/image-product-mobile.jpg" alt="Mobile-design">
   </picture>
 <div class="content">
   <h1>Perfume</h1>
