--- a/four-card-feature-section-master/index.html
+++ b/four-card-feature-section-master/index.html
@@ -10,25 +10,39 @@
 
 </head>
 <body>
+  <main>
   
-  Reliable, efficient delivery
-  Powered by Technology
+  <h1>Reliable, efficient delivery</h1>
+  <h2>Powered by Technology</h2>
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
+  <p class="description">Our Artificial Intelligence powered tools use millions of project data points 
+  to ensure that your project is successful</p>
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+  <section class="super">
+  <h3>Supervisor</h3>
+  <p>Monitors activity to identify project roadblocks</p>
+  <img src="./images/icon-supervisor.svg" alt="">
+  </section>
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
+  <section class="builder">
+  <h3>Team Builder</h3>
+  <p>Scans our talent network to create the optimal team for your project</p>
+    <img src="./images/icon-team-builder.svg" alt="">
+</section>
 
-  Karma
-  Regularly evaluates our talent to ensure quality
+  <section class="karma">
+  <h3>Karma</h3>
+  <p>Regularly evaluates our talent to ensure quality</p> 
+  <img src="./images/icon-karma.svg" alt="">
+  </section>
 
-  Calculator
-  Uses data from past projects to provide better delivery estimates
+  <section class="calculator">
+  <h3>Calculator</h3>
+  <p>Uses data from past projects to provide better delivery estimates</p>
+    <img src="./images/icon-calculator.svg" alt="Computer">
+</section>
 
+  </main>
   <footer>
 
   </footer>
