--- a/four-card-feature-section-master/index.html
+++ b/four-card-feature-section-master/index.html
@@ -10,13 +10,18 @@
 
 </head>
 <body>
-  <main>
-  
+  <div class="title">
+
   <h1>Reliable, efficient delivery</h1>
+
   <h2>Powered by Technology</h2>
 
   <p class="description">Our Artificial Intelligence powered tools use millions of project data points 
   to ensure that your project is successful</p>
+
+  </div>
+<main>
+<div class="main-container">
 
   <section class="super">
   <h3>Supervisor</h3>
@@ -42,9 +47,7 @@
     <img src="./images/icon-calculator.svg" alt="Computer">
 </section>
 
-  </main>
-  <footer>
-
-  </footer>
+</div>
+</main>
 </body>
 </html>
