--- a/testimonials-grid-section-main/index.html
+++ b/testimonials-grid-section-main/index.html
@@ -11,58 +11,88 @@
 
 </head>
 <body>
-  Daniel Clifford
-  Verified Graduate
+<article class="daniel">
+  <div class="avatar">
+    <img src="./images/image-daniel.jpg" alt="Daniel">
+  <h1>Daniel Clifford</h1>
+  <h2>Verified Graduate</h2>
+  </div>
 
-  I received a job offer mid-course, and the subjects I learned were current, if not more so, 
-  in the company I joined. I honestly feel I got every penny’s worth.
+  <p><strong>I received a job offer mid-course, and the subjects I learned were current, if not more so, 
+  in the company I joined. I honestly feel I got every penny’s worth.</strong></p>
 
-  “ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a 
+  <p>“ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a 
   transition and have heard some people who had an amazing experience here. I signed up 
   for the free intro course and found it incredibly fun! I enrolled shortly thereafter. 
   The next 12 weeks was the best - and most grueling - time of my life. Since completing 
-  the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”
+  the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”</p>
 
-  Jonathan Walters
-  Verified Graduate
+</article>
 
-  The team was very supportive and kept me motivated
+<article class="jona">
+  <div class="avatar2">
+    <img src="./images/image-jonathan.jpg" alt="Jona">
+  <h1>Jonathan Walters</h1>
+  <h2>Verified Graduate</h2>
+  </div>
 
-  “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer 
-  for a big company. This was one of the best investments I’ve made in myself. ”
+  <p><strong>The team was very supportive and kept me motivated</strong></p>
+  
+  <p>“ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer 
+  for a big company. This was one of the best investments I’ve made in myself. ”</p>
+  
+</article>
 
-  Jeanette Harmon
-  Verified Graduate
+<article class="jean">
+  <div class="avatar3">
+    <img src="./images/image-jeanette.jpg" alt="Jean">
+  <h1>Jeanette Harmon</h1>
+  <h2>Verified Graduate</h2>
+  </div>
 
-  An overall wonderful and rewarding experience
+  <p><strong>An overall wonderful and rewarding experience</strong></p>
+  
+  <p>“ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living 
+  while doing something I love. ”</p>
 
-  “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living 
-  while doing something I love. ”
+</article>
 
-  Patrick Abrams
-  Verified Graduate
+<article class="patrick">
+  <div class="avatar4">
+    <img src="./images/image-patrick.jpg" alt="Patrick">
+  <h1>Patrick Abrams</h1>
+  <h2>Verified Graduate</h2>
+  </div>
 
-  Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and 
-  learning from their experiences was easy.
+  <p><strong> Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and 
+  learning from their experiences was easy.</strong></p>
 
-  “ The staff seem genuinely concerned about my progress which I find really refreshing. The program 
+  <p>“ The staff seem genuinely concerned about my progress which I find really refreshing. The program 
   gave me the confidence necessary to be able to go out in the world and present myself as a capable 
   junior developer. The standard is above the rest. You will get the personal attention you need from 
-  an incredible community of smart and amazing people. ”
+  an incredible community of smart and amazing people. ”</p>
 
-  Kira Whittle
-  Verified Graduate
+</article>
 
-  Such a life-changing experience. Highly recommended!
+<article class="kira">
+  <div class="avatar5">
+    <img src="./images/image-kira.jpg" alt="Kira">
+  <h1>Kira Whittle</h1>
+  <h2>Verified Graduate</h2> 
+  </div>
 
-  “ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from 
+  <p><strong>Such a life-changing experience. Highly recommended!</strong></p>
+  
+  <p>“ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from 
   professionals who can help me learn programming step by step. I was encouraged to enroll by a former 
   student of theirs who can only say wonderful things about the program. The entire curriculum and staff 
   did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team 
   project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial 
   could ever have. In fact, I’ve often referred to it during interviews as an example of my developent 
   experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 
-  100% recommend! ”
-  
+  100% recommend! ”</p>
+
+</article>
+
 </body>
 </html>
