--- a/testimonials-grid-section-main/index.html
+++ b/testimonials-grid-section-main/index.html
@@ -11,6 +11,7 @@
 
 </head>
 <body>
+<div class="main-container">
 <article class="daniel">
   <div class="avatar">
     <img src="./images/image-daniel.jpg" alt="Daniel">
@@ -18,8 +19,8 @@
   <h2>Verified Graduate</h2>
   </div>
 
-  <p><strong>I received a job offer mid-course, and the subjects I learned were current, if not more so, 
-  in the company I joined. I honestly feel I got every penny’s worth.</strong></p>
+  <p><span>I received a job offer mid-course, and the subjects I learned were current, if not more so, 
+    in the company I joined. I honestly feel I got every penny’s worth.</span></p>
 
   <p>“ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a 
   transition and have heard some people who had an amazing experience here. I signed up 
@@ -36,7 +37,7 @@
   <h2>Verified Graduate</h2>
   </div>
 
-  <p><strong>The team was very supportive and kept me motivated</strong></p>
+  <p><span>The team was very supportive and kept me motivated</span></p>
   
   <p>“ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer 
   for a big company. This was one of the best investments I’ve made in myself. ”</p>
@@ -46,13 +47,13 @@
 <article class="jean">
   <div class="avatar3">
     <img src="./images/image-jeanette.jpg" alt="Jean">
-  <h1>Jeanette Harmon</h1>
+  <h1 style="color: hsl(217, 19%, 35%);">Jeanette Harmon</h1>
   <h2>Verified Graduate</h2>
   </div>
 
-  <p><strong>An overall wonderful and rewarding experience</strong></p>
+  <p><span class="grey">An overall wonderful and rewarding experience</span></p>
   
-  <p>“ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living 
+  <p class="grey2">“ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living 
   while doing something I love. ”</p>
 
 </article>
@@ -64,8 +65,8 @@
   <h2>Verified Graduate</h2>
   </div>
 
-  <p><strong> Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and 
-  learning from their experiences was easy.</strong></p>
+  <p><span>Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and 
+    learning from their experiences was easy.</span></p>
 
   <p>“ The staff seem genuinely concerned about my progress which I find really refreshing. The program 
   gave me the confidence necessary to be able to go out in the world and present myself as a capable 
@@ -77,13 +78,13 @@
 <article class="kira">
   <div class="avatar5">
     <img src="./images/image-kira.jpg" alt="Kira">
-  <h1>Kira Whittle</h1>
+  <h1 style="color: hsl(217, 19%, 35%);">Kira Whittle</h1>
   <h2>Verified Graduate</h2> 
   </div>
 
-  <p><strong>Such a life-changing experience. Highly recommended!</strong></p>
+  <p><span class="grey">Such a life-changing experience. Highly recommended!</span></p>
   
-  <p>“ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from 
+  <p class="grey2">“ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from 
   professionals who can help me learn programming step by step. I was encouraged to enroll by a former 
   student of theirs who can only say wonderful things about the program. The entire curriculum and staff 
   did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team 
@@ -93,6 +94,6 @@
   100% recommend! ”</p>
 
 </article>
-
+</div>
 </body>
 </html>
