--- a/testimonials-grid-section-main/index.html
+++ b/testimonials-grid-section-main/index.html
@@ -15,8 +15,10 @@
 <article class="daniel">
   <div class="avatar">
     <img src="./images/image-daniel.jpg" alt="Daniel">
-  <h1>Daniel Clifford</h1>
-  <h2>Verified Graduate</h2>
+    <div class="avatar-content">
+  <h1 class="username">Daniel Clifford</h1>
+  <h2 class="text">Verified Graduate</h2>
+  </div>
   </div>
 
   <p><span>I received a job offer mid-course, and the subjects I learned were current, if not more so, 
@@ -31,10 +33,12 @@
 </article>
 
 <article class="jona">
-  <div class="avatar2">
+  <div class="avatar">
     <img src="./images/image-jonathan.jpg" alt="Jona">
-  <h1>Jonathan Walters</h1>
-  <h2>Verified Graduate</h2>
+    <div class="avatar-content">
+  <h1 class="username">Jonathan Walters</h1>
+  <h2 class="text">Verified Graduate</h2>
+  </div>
   </div>
 
   <p><span>The team was very supportive and kept me motivated</span></p>
@@ -45,10 +49,12 @@
 </article>
 
 <article class="jean">
-  <div class="avatar3">
+  <div class="avatar">
     <img src="./images/image-jeanette.jpg" alt="Jean">
-  <h1 style="color: hsl(217, 19%, 35%);">Jeanette Harmon</h1>
-  <h2>Verified Graduate</h2>
+    <div class="avatar-content">
+  <h1 class="username">Jeanette Harmon</h1>
+  <h2 class="text">Verified Graduate</h2>
+  </div>
   </div>
 
   <p><span class="grey">An overall wonderful and rewarding experience</span></p>
@@ -59,10 +65,12 @@
 </article>
 
 <article class="patrick">
-  <div class="avatar4">
+  <div class="avatar">
     <img src="./images/image-patrick.jpg" alt="Patrick">
-  <h1>Patrick Abrams</h1>
-  <h2>Verified Graduate</h2>
+    <div class="avatar-content">
+  <h1 class="username">Patrick Abrams</h1>
+  <h2 class="text">Verified Graduate</h2>
+  </div>
   </div>
 
   <p><span>Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and 
@@ -76,10 +84,12 @@
 </article>
 
 <article class="kira">
-  <div class="avatar5">
+  <div class="avatar">
     <img src="./images/image-kira.jpg" alt="Kira">
-  <h1 style="color: hsl(217, 19%, 35%);">Kira Whittle</h1>
-  <h2>Verified Graduate</h2> 
+    <div class="avatar-content">
+  <h1 class="username">Kira Whittle</h1>
+  <h2 class="text">Verified Graduate</h2> 
+    </div>
   </div>
 
   <p><span class="grey">Such a life-changing experience. Highly recommended!</span></p>
