--- a/testimonials-grid-section-main/index.html
+++ b/testimonials-grid-section-main/index.html
@@ -20,7 +20,7 @@
   <h2 class="text">Verified Graduate</h2>
   </div>
   </div>
-
+  <p class="comillas">``</p>
   <p><span>I received a job offer mid-course, and the subjects I learned were current, if not more so, 
     in the company I joined. I honestly feel I got every penny’s worth.</span></p>
 
